--- a/taekwondo-desafio-github/package.json
+++ b/taekwondo-desafio-github/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dio-desafio-github",
+  "name": "taekwondo-desafio-github",
   "version": "1.0.0",
   "description": "Desafio de Projeto Bootcamp Spread da DIO",
   "main": "index.js",
